[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meatier"
version = "0.1.0"
description = "Toy implementation of meteor, eprint.iacr.org/2021/686"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "no one", email = "fake@email.com"}
]
keywords = ["steganography", "cryptography", "machine-learning"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[tool.setuptools]
packages = ["meatier"]

[tool.setuptools.package-dir]
"" = "src"
